# simple_3dtest

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.cpp
